# SortVBTransactions

./: README.md
SortVBTransactions-src/: CMakeLists.txt
SortVBTransactions-src/SortVBTransactions/: AreaOfFinance.cpp  AreaOfFinance.h  CMakeLists.txt  HelperFunctions.cpp  HelperFunctions.h  Transaction.cpp  Transaction.h  TransactionGroup.cpp  TransactionGroup.h  TransactionGroups.cpp  TransactionGroups.h  TransactionItem.h  main.cpp  main.h  main23.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
